--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,17 +24,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:27.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.squareup.retrofit2:retrofit:2.6.4' // 2.7+ requires java 8
-    compile 'com.squareup.retrofit2:converter-gson:2.6.4'
-    compile group: 'com.jjoe64', name: 'graphview', version: '4.2.2'
+    implementation 'com.android.support:appcompat-v7:27.+'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.4' // 2.7+ requires java 8
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.4'
+    implementation group: 'com.jjoe64', name: 'graphview', version: '4.2.2'
+//    implementation 'androidx.preference:preference:1.1.1'
 
-//    compile 'com.squareup.okhttp3:okhttp:3.12.0'
+//    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
 
-    testCompile 'junit:junit:4.12'
 }
